force-app/main/default/objects/Annuity__c/Annuity__c.object-meta.xml
<CustomObject>
    <label>Annuity</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Annuity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annuities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>