force-app/main/default/objects/Annuity__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Lifetime</fullName>
            </value>
            <value>
                <fullName>Joint Lifetime</fullName>
            </value>
            <value>
                <fullName>Set Period of time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>