force-app/main/default/objects/Annuity__c/fields/Monthly_Income_10_Year__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Income_10_Year__c</fullName>
    <label>Monthly Income 10 Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>